* updated Italian translation (Luigi Baldoni)
* updated Russian translation
* updated Dutch (Netherlands) translation (Heimen Stoffels)
* updated Czech translation (fri)
* updated German translation (Atalanttore)
* updated Chinese (Taiwan) translation (Jeff Huang)

Version 0.29
* fixed libqt5ct-style.so installation path (Philip Müller)
* updated Greek translation (Dimitrios Glentadakis)

Version 0.30
* fixed crash on nonexistent style in qt5ct.conf
* fixed issue with KDE color themes
* updated documentation
* updated Bulgarian translation (Kiril Kirilov)
* updated French translation (Geiger David)

Version 0.31
* added option "Toolbar button style"
* added option "Mouse wheel scroll lines"
* added test for minimal Qt version
* added Arabic translation (abouzakaria kov)
* using c++11 for source code
* fixed Qt 5.4 support
* updated Russian translation
* updated Bulgarian translation (Kiril Kirilov)
* updated Dutch (Netherlands) translation (Heimen Stoffels)
* updated Chinese (Taiwan) translation (Jeff Huang)
* updated German translation (Ettore Atalan)
* updated Serbian translation (markosm)
* updated Czech translation (fri)

Version 0.32
* added global menu support
* updated Czech translation (fri)
* updated Greek translation (Dimitrios Glentadakis)
* updated Russian translation

Version 0.33
* fixed build without dbus support (coacher)
* fixed Qt 5.6 support (coacher)
* updated Hebrew translation (Elkana Birdugo)

Version 0.34
* added feature to disable shortcut underlines
* added Danish translation (scootergrisen)
* improved global menu checking
* improved XDG support
* fixed font settings
* fixed Qt 5.5 support
* updated Russian translation
* updated Czech translation (fri)
* updated Dutch (Netherlands) translation (Heimen Stoffels)
* updated Chinese (Taiwan) translation (Jeff Huang)
* updated German translation (Ettore Atalan)
* updated Italian translation (Luigi Baldoni)
* updated Bulgarian translation (Kiril Kirilov)